force-app/main/default/objects/BB_Alignment_Note__c/BB_Alignment_Note__c.object-meta.xml
<CustomObject>
    <description>A discussion note on a capability, from a reviewer or the agent. Shared system of record for the site's notes and the agent's capture-note action.</description>
    <label>BB Alignment Note</label>
    <pluralLabel>BB Alignment Notes</pluralLabel>
    <nameField><label>Note Number</label><type>AutoNumber</type><displayFormat>N-{00000}</displayFormat></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>