force-app/main/default/objects/BB_Alignment_Note__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <description>The capability this note is about.</description>
    <label>Capability</label>
    <referenceTo>BB_Capability__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <required>true</required>
    <type>Lookup</type><deleteConstraint>Cascade</deleteConstraint>
</CustomField>