force-app/main/default/objects/BB_Alignment_Note__c/fields/Captured_At__c.field-meta.xml
<CustomField>
    <fullName>Captured_At__c</fullName>
    <description>When the note was captured.</description>
    <label>Captured At</label><type>DateTime</type><required>false</required>
</CustomField>