force-app/main/default/objects/BB_Alignment_Note__c/fields/Captured_By__c.field-meta.xml
<CustomField>
    <fullName>Captured_By__c</fullName>
    <description>Who left the note (reviewer name or "Agent").</description>
    <label>Captured By</label><length>120</length><type>Text</type><unique>false</unique>
</CustomField>