force-app/main/default/objects/BB_Alignment_Note__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>The note text.</description>
    <label>Note</label><length>8000</length><type>LongTextArea</type><visibleLines>5</visibleLines>
</CustomField>