force-app/main/default/objects/BB_Alignment_Note__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Whether the note came from a reviewer or the agent.</description>
    <label>Source</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Reviewer</fullName><default>true</default><label>Reviewer</label></value>
        <value><fullName>Agent</fullName><default>false</default><label>Agent</label></value>
    </valueSetDefinition></valueSet>
</CustomField>